=== HEAD

* Use Symbol#to_proc instead of explicit blocks (jeremyevans)

=== 4.21.0 (2015-04-01)

* Support :tsquery and :tsvector options in Dataset#full_text_search on PostgreSQL, for using existing tsquery/tsvector expressions (jeremyevans)

* Fix TinyTds::Error being raised when trying to cancel a query on a closed connection in the tinytds adapter (jeremyevans)

* Add GenericExpression#!~ for inverting =~ on ruby 1.9 (similar to inverting a hash) (jeremyevans) (#979)

* Add GenericExpression#=~ for equality, inclusion, and pattern matching (similar to using a hash) (jeremyevans) (#979)

* Add Database#add_named_conversion_proc on PostgreSQL to make it easier to add conversion procs for types by name (jeremyevans)

* Make Sequel.pg_jsonb return JSONBOp instances instead of JSONOp instances when passed other than Array or Hash (jeremyevans) (#977)

* Demodulize default root name in json_serializer plugin (janko-m) (#968)

* Make Database#transaction work in after_commit/after_rollback blocks (jeremyevans)

=== 4.20.0 (2015-03-03)

* Restore the use of AUTOINCREMENT on SQLite (jeremyevans) (#965)

* Duplicate the associations hash when duplicating a model object (jeremyevans)

* Correctly apply association limit when eager loading with an eager block using default limit strategy on some databases (jeremyevans)

* Fix eager loading when using the :window_function limit strategy with an eager block and cascaded associations (jeremyevans)

* Add support for set_column_type :auto_increment=>true to add AUTO_INCREMENT to existing column on MySQL (jeremyevans) (#959)

* Add support for overridding the :instance_specific association option (jeremyevans)

* Recognize MSSQL bit type as boolean in the schema_dumper (jeremyevans)

* Skip eager loading queries if there are no matching keys (jeremyevans) (#952)

* Dataset#paged_each now returns an enumerator if not passed a block (jeremyevans)
