@@ -1,6 +1,11 @@
 # A connection pool allowing multi-threaded access to a pool of connections.
 # This is the default connection pool used by Sequel.
 class Sequel::ThreadedConnectionPool < Sequel::ConnectionPool
+  # Whether or not a ConditionVariable should be used to wait for connections.
+  # True except on ruby 1.8, where ConditionVariable#wait does not support a
+  # timeout.
+  USE_WAITER = RUBY_VERSION >= '1.9'
+
   # The maximum number of connections this pool will create (per shard/server
   # if sharding).
   attr_reader :max_size
@@ -19,7 +24,7 @@ class Sequel::ThreadedConnectionPool < Sequel::ConnectionPool
   # * :max_connections - The maximum number of connections the connection pool
   #   will open (default 4)
   # * :pool_sleep_time - The amount of time to sleep before attempting to acquire
-  #   a connection again (default 0.001)
+  #   a connection again, only used on ruby 1.8. (default 0.001)
   # * :pool_timeout - The amount of seconds to wait to acquire a connection
   #   before raising a PoolTimeoutError (default 5)
   def initialize(db, opts = OPTS)
@@ -31,7 +36,12 @@ class Sequel::ThreadedConnectionPool < Sequel::ConnectionPool
     @available_connections = []
     @allocated = {}
     @timeout = Float(opts[:pool_timeout] || 5)
-    @sleep_time = Float(opts[:pool_sleep_time] || 0.001)
+
+    if USE_WAITER
+      @waiter = ConditionVariable.new
+    else
+      @sleep_time = Float(opts[:pool_sleep_time] || 0.001)
+    end
   end
   
   # Yield all of the available connections, and the one currently allocated to
@@ -85,16 +95,7 @@ class Sequel::ThreadedConnectionPool < Sequel::ConnectionPool
       return yield(conn)
     end
     begin
-      unless conn = acquire(t)
-        time = Time.now
-        timeout = time + @timeout
-        sleep_time = @sleep_time
-        sleep sleep_time
-        until conn = acquire(t)
-          raise(::Sequel::PoolTimeout) if Time.now > timeout
-          sleep sleep_time
-        end
-      end
+      conn = acquire(t)
       yield conn
     rescue Sequel::DatabaseDisconnectError
       oconn = conn
@@ -120,16 +121,65 @@ class Sequel::ThreadedConnectionPool < Sequel::ConnectionPool
   private
 
   # Assigns a connection to the supplied thread, if one
-  # is available. The calling code should NOT already have the mutex when
+  # is available. The calling code should already have the mutex when
   # calling this.
-  def acquire(thread)
-    sync do
-      if conn = available
-        @allocated[thread] = conn
-      end
+  def _acquire(thread)
+    if conn = available
+      @allocated[thread] = conn
     end
   end
   
+  if USE_WAITER
+    # Assigns a connection to the supplied thread, if one
+    # is available. The calling code should NOT already have the mutex when
+    # calling this.
+    #
+    # This should return a connection is one is available within the timeout,
+    # or nil if a connection could not be acquired within the timeout.
+    def acquire(thread)
+      sync do
+        if conn = _acquire(thread)
+          return conn
+        end
+
+        time = Time.now
+        @waiter.wait(@mutex, @timeout)
+
+        # Not sure why this is helpful, but calling Thread.pass after conditional
+        # variable access dramatically increases reliability when under heavy
+        # resource contention (almost eliminating timeouts), at a small cost to
+        # runtime performance.
+        Thread.pass
+
+        until conn = _acquire(thread)
+          deadline ||= time + @timeout
+          current_time = Time.now
+          raise(::Sequel::PoolTimeout, "timeout: #{@timeout}, elapsed: #{current_time - time}") if current_time > deadline
+          @waiter.wait(@mutex, deadline - current_time)
+          Thread.pass
+        end
+
+        conn
+      end
+    end
+  else
+    # :nocov:
+    def acquire(thread)
+      unless conn = sync{_acquire(thread)}
+        time = Time.now
+        timeout = time + @timeout
+        sleep_time = @sleep_time
+        sleep sleep_time
+        until conn = sync{_acquire(thread)}
+          raise(::Sequel::PoolTimeout, "timeout: #{@timeout}, elapsed: #{Time.now - time}") if Time.now > timeout
+          sleep sleep_time
+        end
+      end
+      conn
+    end
+    # :nocov:
+  end
+
   # Returns an available connection. If no connection is
   # available, tries to create a new connection. The calling code should already
   # have the mutex before calling this.
@@ -141,6 +191,10 @@ class Sequel::ThreadedConnectionPool < Sequel::ConnectionPool
   # The calling code should already have the mutex before calling this.
   def checkin_connection(conn)
     @available_connections << conn
+    if USE_WAITER
+      @waiter.signal
+      Thread.pass
+    end
     conn
   end
 
